@@ -14,11 +14,6 @@ import java.util.StringTokenizer;
 
 import org.apache.log4j.Logger;
 
-import com.ikokoon.instrumentation.model.Line;
-import com.ikokoon.instrumentation.model.Method;
-import com.ikokoon.instrumentation.model.Project;
-import com.ikokoon.persistence.IDataBase;
-
 /**
  * This class contains methods for changing a string to the byte code representation and visa versa. Also some other nifty functions like stripping a
  * string of white space etc.
@@ -47,7 +42,7 @@ public class Toolkit {
 		for (int i = 0; i < chars.length; i++) {
 			hash = (hash * seed) + chars[i];
 		}
-		return new Long(Math.abs(hash));
+		return Long.valueOf(Math.abs(hash));
 	}
 
 	/**
@@ -164,15 +159,10 @@ public class Toolkit {
 				char c = chars[i];
 				switch (c) {
 				case '(':
-					break;
 				case ')':
-					break;
 				case '[':
-					break;
 				case ']':
-					break;
 				case '+':
-					break;
 				case '-':
 					break;
 				case 'B':
@@ -289,7 +279,7 @@ public class Toolkit {
 	 * @return a string buffer with all the fields in an object including the super classes
 	 */
 	public static String toString(Object object, Class<?> klass, StringBuffer buffer) {
-		if (object != null && klass != null && buffer != null)
+		if (object != null && klass != null && buffer != null) {
 			try {
 				buffer.append(String.valueOf(klass.getName())).append("\n");
 				Class<?>[] interfaceClasses = klass.getInterfaces();
@@ -314,10 +304,14 @@ public class Toolkit {
 				}
 				klass = klass.getSuperclass();
 				return toString(object, klass, buffer);
-			} catch (Throwable t) {
+			} catch (Exception t) {
 				logger.error("Exception generating string for object " + object, t);
 			}
-		return buffer.toString();
+		}
+		if (buffer != null) {
+			return buffer.toString();
+		}
+		return null;
 	}
 
 	/**
@@ -486,29 +480,20 @@ public class Toolkit {
 	 *            the byte data to write
 	 */
 	public static void setContents(File file, byte[] bytes) {
+		FileOutputStream fileOutputStream = null;
 		try {
-			FileOutputStream fileOutputStream = new FileOutputStream(file);
+			fileOutputStream = new FileOutputStream(file);
 			fileOutputStream.write(bytes, 0, bytes.length);
 		} catch (FileNotFoundException e) {
 			logger.error("File " + file + " not found", e);
 		} catch (IOException e) {
 			logger.error("IO exception writing file contents", e);
-		}
-
-	}
-
-	public static void dump(IDataBase dataBase) {
-		Project project = dataBase.find(Project.class, Toolkit.hash(Project.class.getName()));
-		List<com.ikokoon.instrumentation.model.Package> packages = project.getChildren();
-		for (com.ikokoon.instrumentation.model.Package pakkage : packages) {
-			logger.error("Package : " + pakkage + ", " + pakkage.getChildren().size());
-			for (com.ikokoon.instrumentation.model.Class klass : pakkage.getChildren()) {
-				logger.error("Class : " + klass + ", " + klass.getChildren());
-				for (Method method : klass.getChildren()) {
-					logger.error("Method : " + method + ", " + method.getChildren().size());
-					for (Line line : method.getChildren()) {
-						logger.error("Line : " + line);
-					}
+		} finally {
+			if (fileOutputStream != null) {
+				try {
+					fileOutputStream.close();
+				} catch (IOException e) {
+					logger.error("Exception closing the output stream", e);
 				}
 			}
 		}
